# Solana

./: Anchor.toml  Cargo.toml  README.md
app/: next.config.js  package.json
app/src/components/: MarketplaceStats.tsx  ProjectCard.tsx  TradingInterface.tsx
app/src/lib/: anchor-client.ts  solana-client.ts
app/src/pages/: _app.tsx  index.tsx
app/src/styles/: globals.css
docs/: API_REFERENCE.md
programs/carbon-marketplace/: Cargo.toml
programs/carbon-marketplace/src/: lib.rs
programs/carbon-registry/: Cargo.toml
programs/carbon-registry/src/: lib.rs
programs/carbon-verification/: Cargo.toml
programs/carbon-verification/src/: lib.rs
scripts/: deploy.sh  setup.js
