[package]
name = "carbon-registry"
version = "0.1.0"
description = "Global Carbon Credit Registry System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "carbon_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }